--- a/style/Style.css
+++ b/style/Style.css
@@ -7,7 +7,22 @@
 #root-div {
   width: 100vw;
   height: 100vh;
-  background-color: #FFFFFF; }
+  background-color: #FFFFFF;
+  min-width: 300px; }
+  #root-div .settings-section {
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    background-color: #b6b2b2;
+    z-index: -100;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    #root-div .settings-section .setting-head {
+      width: 100%;
+      height: 35px;
+      border: 1px solid; }
   #root-div .head-section {
     width: 100%;
     height: 60px;
@@ -16,19 +31,41 @@
     align-items: center;
     justify-content: space-between; }
     #root-div .head-section .add-new-note-button {
-      width: 40px;
-      height: 40px;
-      margin-left: 2px; }
+      width: 35px;
+      height: 35px;
+      background: none;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      margin-left: 2px;
+      border-radius: 4px; }
+      #root-div .head-section .add-new-note-button:hover {
+        background-color: antiquewhite; }
       #root-div .head-section .add-new-note-button .bi-plus-lg {
         font-size: 1.5rem; }
     #root-div .head-section .user-profile-image {
       width: 55px;
       height: 55px;
       border: 1px red solid; }
+      #root-div .head-section .user-profile-image .image-holder {
+        width: 50px;
+        height: 50px;
+        margin: 2px auto;
+        border: 1px greenyellow solid;
+        border-radius: 50px;
+        background-color: aqua;
+        cursor: pointer; }
     #root-div .head-section .settings-button {
-      width: 40px;
-      height: 40px;
-      margin-right: 2px; }
+      width: 35px;
+      height: 35px;
+      background: none;
+      border: none;
+      outline: none;
+      margin-right: 2px;
+      cursor: pointer;
+      border-radius: 4px; }
+      #root-div .head-section .settings-button:hover {
+        background-color: antiquewhite; }
       #root-div .head-section .settings-button .bi-gear {
         font-size: 1.3rem; }
   #root-div .app-name-section {
@@ -40,8 +77,31 @@
       font-size: 1.4rem; }
   #root-div .search-section {
     width: 100%;
-    height: 35px;
+    height: 40px;
     border: 1px red solid;
     margin-top: 6px; }
+    #root-div .search-section .input-fild {
+      width: 70%;
+      height: 35px;
+      border-radius: 4px;
+      outline: none;
+      background: none;
+      margin-top: 4px;
+      border: none;
+      border: 1px solid; }
+    #root-div .search-section .search-button {
+      width: 25px;
+      height: 25px;
+      margin-left: -35px;
+      background: none;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      border: 1px solid;
+      border-radius: 4px; }
+      #root-div .search-section .search-button:hover {
+        background-color: antiquewhite; }
+      #root-div .search-section .search-button .bi-search {
+        font-size: 1rem; }
 
 /*# sourceMappingURL=style.css.map */
