--- a/style/Style.css
+++ b/style/Style.css
@@ -4,29 +4,46 @@
   padding: 0;
   box-sizing: border-box; }
 
+body {
+  font-family: 'Catamaran', sans-serif; }
+
 #root-div {
   width: 100vw;
   height: 100vh;
   background-color: #FFFFFF;
-  min-width: 300px; }
+  min-width: 300px;
+  max-width: 600px; }
   #root-div .settings-section {
     width: inherit;
     height: inherit;
     position: absolute;
     background-color: #b6b2b2;
     z-index: -100;
-    opacity: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; }
+    opacity: 0; }
     #root-div .settings-section .setting-head {
       width: 100%;
-      height: 35px;
-      border: 1px solid; }
+      height: 40px;
+      border: 1px black solid;
+      display: flex;
+      align-items: center;
+      justify-content: space-between; }
+      #root-div .settings-section .setting-head .back-button {
+        width: 35px;
+        height: 35px;
+        background: none;
+        outline: none;
+        border: none;
+        cursor: pointer; }
+        #root-div .settings-section .setting-head .back-button:hover {
+          background-color: #EEEEEE; }
+        #root-div .settings-section .setting-head .back-button .bi-arrow-left {
+          font-size: 1.2rem; }
+      #root-div .settings-section .setting-head .section-name {
+        color: #898989;
+        margin-right: 40%; }
   #root-div .head-section {
     width: 100%;
     height: 60px;
-    border: 1px  solid;
     display: flex;
     align-items: center;
     justify-content: space-between; }
@@ -40,20 +57,20 @@
       margin-left: 2px;
       border-radius: 4px; }
       #root-div .head-section .add-new-note-button:hover {
-        background-color: antiquewhite; }
+        background-color: #EEEEEE; }
       #root-div .head-section .add-new-note-button .bi-plus-lg {
         font-size: 1.5rem; }
     #root-div .head-section .user-profile-image {
       width: 55px;
-      height: 55px;
-      border: 1px red solid; }
+      height: 55px; }
       #root-div .head-section .user-profile-image .image-holder {
         width: 50px;
         height: 50px;
         margin: 2px auto;
-        border: 1px greenyellow solid;
         border-radius: 50px;
-        background-color: aqua;
+        background-image: url("./TestUserProfileImage/426040919_2046 (2).jpg");
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
         cursor: pointer; }
     #root-div .head-section .settings-button {
       width: 35px;
@@ -65,42 +82,46 @@
       cursor: pointer;
       border-radius: 4px; }
       #root-div .head-section .settings-button:hover {
-        background-color: antiquewhite; }
+        background-color: #EEEEEE; }
       #root-div .head-section .settings-button .bi-gear {
         font-size: 1.3rem; }
   #root-div .app-name-section {
     width: 100%;
-    height: 35px;
-    margin-top: 5px;
-    border: 1px red solid; }
+    height: 30px;
+    margin-top: 2px; }
     #root-div .app-name-section .app-name-tag {
-      font-size: 1.4rem; }
+      font-size: 1.4rem;
+      font-family: inherit;
+      cursor: default; }
   #root-div .search-section {
     width: 100%;
     height: 40px;
-    border: 1px red solid;
-    margin-top: 6px; }
+    margin-top: 4px; }
     #root-div .search-section .input-fild {
-      width: 70%;
+      width: 98%;
       height: 35px;
-      border-radius: 4px;
+      border-radius: 2px;
       outline: none;
       background: none;
       margin-top: 4px;
+      margin-left: 2px;
       border: none;
-      border: 1px solid; }
+      background-color: #EEEEEE;
+      font-family: inherit;
+      font-size: 1.2rem; }
+      #root-div .search-section .input-fild::placeholder {
+        font-size: 1rem; }
     #root-div .search-section .search-button {
-      width: 25px;
-      height: 25px;
+      width: 30px;
+      height: 30px;
       margin-left: -35px;
       background: none;
       border: none;
       outline: none;
       cursor: pointer;
-      border: 1px solid;
       border-radius: 4px; }
       #root-div .search-section .search-button:hover {
-        background-color: antiquewhite; }
+        background-color: #EEEEEE; }
       #root-div .search-section .search-button .bi-search {
         font-size: 1rem; }
 
