--- a/style/Style.scss
+++ b/style/Style.scss
@@ -10,8 +10,13 @@
 
 $button-width : 35px;
 $button-height : 35px;
+$button-hover-bkColor: #EEEEEE;
 
 
+//button commen style !
+body{
+    font-family:  'Catamaran', sans-serif;
+}
 
 
 #root-div{
@@ -19,6 +24,8 @@ $button-height : 35px;
    height: 100vh;
    background-color: #FFFFFF;
    min-width: 300px;
+   max-width: 600px;
+  // border: 1px red solid;
 
    .settings-section{
     width: inherit;
@@ -27,21 +34,42 @@ $button-height : 35px;
     background-color: rgb(182, 178, 178);
     z-index: -100;
     opacity: 0;
-    display: flex;//
-    align-items: center;//
-    justify-content: space-between;//
 
     .setting-head{
         width: 100%;
-        height: 35px;
-        border: 1px solid;
+        height: 40px;
+        border: 1px black solid ;
+        display: flex;//
+        align-items: center;//
+        justify-content: space-between;//
+
+        .back-button{
+            width: $button-width;
+            height: $button-height;
+            background: none;//
+            outline: none;//
+            border: none;//
+            cursor: pointer;//
+            &:hover{//
+                background-color: $button-hover-bkColor
+            }
+
+            .bi-arrow-left{
+                font-size: 1.2rem;
+            }
+        }
+
+        .section-name{
+            color: #898989;
+            margin-right: 40%;
+        }
     }
    }
 
    .head-section{
     width: 100%;
     height: 60px;
-    border: 1px  solid;
+    //border: 1px  solid;
     display: flex;//
     align-items: center;//
     justify-content: space-between;//
@@ -57,7 +85,7 @@ $button-height : 35px;
         margin-left: 2px;
         border-radius: 4px;
         &:hover{//
-            background-color: antiquewhite;
+            background-color: $button-hover-bkColor
         }
 
         .bi-plus-lg{
@@ -68,15 +96,17 @@ $button-height : 35px;
     .user-profile-image{
         width: 55px;
         height: 55px;
-        border: 1px red solid;
+       // border: 1px red solid;
 
         .image-holder{
             width: 50px;
             height: 50px;
             margin: 2px auto;
-            border: 1px greenyellow solid;
+           // border: 1px greenyellow solid;
             border-radius: 50px;
-            background-color: aqua;
+            background-image: url('./TestUserProfileImage/426040919_2046\ \(2\).jpg');
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
             cursor: pointer;
         }
     }
@@ -91,7 +121,7 @@ $button-height : 35px;
         cursor:pointer;//
         border-radius: 4px;
         &:hover{
-            background-color: antiquewhite;
+            background-color: $button-hover-bkColor;
         }
     
 
@@ -104,12 +134,14 @@ $button-height : 35px;
 
    .app-name-section{
     width: 100%;
-    height: 35px;
-    margin-top: 5px;
-    border: 1px red solid;
+    height: 30px;
+    margin-top: 2px;
+   // border: 1px red solid;
 
     .app-name-tag{
         font-size: 1.4rem;
+        font-family: inherit;
+        cursor: default;
     }
 
    }
@@ -117,32 +149,38 @@ $button-height : 35px;
    .search-section{
     width: 100%;
     height: 40px;
-    border: 1px red solid;
-    margin-top: 6px;
+  //  border: 1px red solid;
+    margin-top: 4px;
 
     .input-fild{
-      width: 70%;
+      width: 98%;
       height: 35px;
-      border-radius: 4px;
+      border-radius: 2px;
       outline: none;
       background: none;
       margin-top: 4px;
+      margin-left: 2px;
       border: none;
-      border: 1px solid;
+      background-color: #EEEEEE;
+      font-family: inherit;
+      font-size: 1.2rem;
+
+      &::placeholder{
+        font-size: 1rem;
+      }
     }
 
     .search-button{
-        width: 25px;
-        height: 25px;
+        width: 30px;
+        height: 30px;
         margin-left: -35px;
         background: none;//
         border: none;//
         outline: none;//
         cursor: pointer;//
-        border: 1px solid;
         border-radius: 4px;
         &:hover{
-            background-color: antiquewhite;
+            background-color: $button-hover-bkColor;
         }
         
         .bi-search{
