--- a/style/Style.css
+++ b/style/Style.css
@@ -13,11 +13,68 @@ body {
   background-color: #FFFFFF;
   min-width: 300px;
   max-width: 600px; }
+  #root-div .add-new-note-section {
+    width: 90%;
+    height: 300px;
+    min-width: 270px;
+    max-width: 360px;
+    background-color: #F3F2F1;
+    position: absolute;
+    z-index: 100;
+    opacity: 1;
+    margin-left: 5%;
+    margin-top: 100px;
+    border-radius: 8px; }
+    #root-div .add-new-note-section .add-new-head-section {
+      width: 100%;
+      height: 30px;
+      background-color: #E1DFDD;
+      border-radius: 8px 8px 0px 0px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between; }
+      #root-div .add-new-note-section .add-new-head-section .add-another-note-bt {
+        width: 30px;
+        height: 30px;
+        border: none;
+        background: none;
+        outline: none;
+        cursor: pointer;
+        border-radius: 8px 0px 0px 0px; }
+        #root-div .add-new-note-section .add-new-head-section .add-another-note-bt .bi-plus-lg {
+          font-size: 1.1rem; }
+        #root-div .add-new-note-section .add-new-head-section .add-another-note-bt:hover {
+          background-color: #EEEEEE; }
+      #root-div .add-new-note-section .add-new-head-section .option-button {
+        width: 30px;
+        height: 30px;
+        background: none;
+        border: none;
+        outline: none;
+        cursor: pointer; }
+        #root-div .add-new-note-section .add-new-head-section .option-button .bi-three-dots {
+          font-size: 1rem; }
+        #root-div .add-new-note-section .add-new-head-section .option-button:hover {
+          background-color: #EEEEEE; }
+      #root-div .add-new-note-section .add-new-head-section .close-button {
+        width: 30px;
+        height: 30px;
+        background: none;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        border-radius: 0px 8px 0px 0px; }
+        #root-div .add-new-note-section .add-new-head-section .close-button .bi-x {
+          font-size: 1.2rem; }
+        #root-div .add-new-note-section .add-new-head-section .close-button:hover {
+          background-color: #EEEEEE; }
   #root-div .settings-section {
     width: inherit;
     height: inherit;
     position: absolute;
-    background-color: #FFFFFF; }
+    background-color: #FFFFFF;
+    z-index: -100;
+    opacity: 0; }
     #root-div .settings-section .setting-head {
       width: 100%;
       height: 40px;
