--- a/style/Style.scss
+++ b/style/Style.scss
@@ -27,13 +27,95 @@ body{
    max-width: 600px;
   // border: 1px red solid;
 
+   .add-new-note-section{
+    width:90%;
+    height: 300px;
+    min-width: 270px;
+    max-width: 360px;
+    background-color: #F3F2F1;
+    //border: 1px red solid;
+    position: absolute;
+    z-index: 100;
+    opacity: 1;
+    margin-left: 5%;
+    margin-top: 100px;
+    border-radius: 8px;
+
+    .add-new-head-section{
+        width: 100%;
+        height: 30px;
+        background-color:#E1DFDD;
+        border-radius: 8px 8px 0px 0px;
+        display: flex;//
+        align-items: center;//
+        justify-content: space-between;//
+        
+
+        .add-another-note-bt{
+            width: 30px;
+            height: 30px;
+            border: none;//
+            background: none;//
+            outline: none;//
+            cursor: pointer;
+            border-radius: 8px 0px 0px 0px;
+
+            .bi-plus-lg{
+                font-size: 1.1rem;
+            }
+
+            &:hover{//
+              background-color: $button-hover-bkColor;
+            }
+        }
+
+        .option-button{
+            width: 30px;
+            height: 30px;
+            background: none;//
+            border: none;//
+            outline: none;//
+            cursor: pointer;//
+         //   background-color: #c16969;
+           // margin-left: 207px;
+
+            .bi-three-dots{
+                font-size: 1rem;
+            }
+
+            &:hover{
+                background-color: $button-hover-bkColor;
+            }
+        }
+
+        .close-button{
+            width: 30px;//difine a var for this button
+            height: 30px;//
+            background: none;//
+            outline: none;//
+            border: none;
+            cursor: pointer;//
+           // background-color: #c16969;
+            border-radius: 0px 8px 0px 0px;
+
+            .bi-x{
+                font-size: 1.2rem;
+            }
+
+            &:hover{
+                background-color: $button-hover-bkColor;
+            }
+        }
+    }
+   }
+
    .settings-section{
     width: inherit;
     height: inherit;
     position: absolute;
     background-color: #FFFFFF;
-   // z-index: -100;
-    //opacity: 0;
+    z-index: -100;
+    opacity: 0;
 
     .setting-head{
         width: 100%;
