--- a/style/Style.css
+++ b/style/Style.css
@@ -21,8 +21,8 @@ body {
     background-color: #F3F2F1;
     border: 0.5px red solid;
     position: absolute;
-    z-index: 100;
-    opacity: 1;
+    z-index: -100;
+    opacity: 0;
     margin-left: 5%;
     margin-top: 100px;
     border-radius: 8px; }
@@ -168,8 +168,9 @@ body {
     position: absolute;
     background-color: #FFFFFF;
     max-width: 600px;
-    z-index: -100;
-    opacity: 0; }
+    z-index: 100;
+    opacity: 1;
+    border: 1px solid; }
     #root-div .settings-section .setting-head {
       width: 100%;
       height: 40px;
@@ -207,13 +208,14 @@ body {
           font-size: 1.4rem; }
     #root-div .settings-section .sing-section {
       width: 100%;
-      height: 120px;
+      height: 100px;
       border: 1px red solid;
-      margin-top: 20px; }
+      margin-top: 5px; }
       #root-div .settings-section .sing-section .sing-text {
         color: black;
         font-size: 1.1rem;
-        margin-left: 2px; }
+        margin-left: 2px;
+        cursor: default; }
       #root-div .settings-section .sing-section .sing-link {
         width: 100px;
         height: 40px;
@@ -230,9 +232,32 @@ body {
         font-family: inherit; }
     #root-div .settings-section .general-section {
       width: 100%;
-      height: 280px;
+      height: 180px;
+      border: 1px red solid;
+      margin-top: 5px; }
+    #root-div .settings-section .color-theme-section {
+      width: 100%;
+      height: 200px;
       border: 1px red solid;
       margin-top: 10px; }
+    #root-div .settings-section .about-me-section {
+      width: 100%;
+      height: 248px;
+      border: 1px solid; }
+      #root-div .settings-section .about-me-section a {
+        display: inline-block;
+        margin-left: 50px;
+        margin-top: 50px;
+        cursor: pointer;
+        font-size: 1.8rem;
+        text-decoration: none;
+        text-decoration: none; }
+    #root-div .settings-section .sections-name-commn-style, #root-div .settings-section .general-section .section-name, #root-div .settings-section .color-theme-section .color-section-name, #root-div .settings-section .about-me-section .about-section-name {
+      color: black;
+      margin-left: 6px;
+      margin-top: 4px;
+      font-size: 1.2rem;
+      cursor: default; }
   #root-div .head-section {
     width: 100%;
     height: 60px;
