--- a/style/Style.scss
+++ b/style/Style.scss
@@ -22,20 +22,18 @@ $addNewNoteRightButtonBorderRadus : 0px 8px 0px 0px;
 $addNewNoteSectionIconeSize : 1.1rem;
 
 
+$settingSectionWidth : 100%;
 
-//button commen style !
+
 body{
     font-family:  'Catamaran', sans-serif;
 }
-
-
 
 @mixin alignItems(){
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-
 
 @mixin buttonStyle(){
     border: none;
@@ -46,7 +44,6 @@ body{
     &:hover{
         background-color: $button-hover-bkColor; 
     }
-
 }
 
 
@@ -66,8 +63,8 @@ body{
     background-color: #F3F2F1;
     border: 0.5px red solid;
     position: absolute;
-    z-index: 100;
-    opacity: 1;
+    z-index: -100;
+    opacity: 0;
     margin-left: 5%;
     margin-top: 100px;
     border-radius: 8px;
@@ -211,60 +208,62 @@ body{
 
    }
 
-   .settings-section{
+  .settings-section{
     width: inherit;
     height: inherit;
     position: absolute;
     background-color: #FFFFFF;
     max-width: 600px;
-    z-index: -100;
-    opacity: 0;
+    z-index: 100;
+    opacity: 1;
+    border: 1px solid;
 
-    .setting-head{
-        width: 100%;
-        height: 40px;
-        border: 1px black solid ;
-        @include alignItems();
-
-        .back-button{
-            width: $button-width;
-            height: $button-height;
-            @include buttonStyle();
-
-            .bi-arrow-left{
-                font-size: 1.2rem;
-            }
-        }
-
-        .section-name{
-            color: black;
-            margin-right: 40%;
-            font-family: inherit;
-            font-size: 1rem;
-            cursor: default;
-        }
-
-        .close-button{
-            width: $button-width;
-            height: $button-height;
-            @include buttonStyle();
-
-            .bi-x{
-                font-size: 1.4rem;
-            }
-        }
-    }
+     .setting-head{
+         width: $settingSectionWidth;
+         height: 40px;
+         border: 1px black solid ;
+         @include alignItems();
+ 
+         .back-button{
+             width: $button-width;
+             height: $button-height;
+             @include buttonStyle();
+ 
+             .bi-arrow-left{
+                 font-size: 1.2rem;
+             }
+         }
+ 
+         .section-name{
+             color: black;//
+             margin-right: 40%;//
+             font-family: inherit;//
+             font-size: 1rem;//
+             cursor: default;
+         }
+ 
+         .close-button{
+             width: $button-width;
+             height: $button-height;
+             @include buttonStyle();
+ 
+             .bi-x{
+                 font-size: 1.4rem;
+             }
+         }
+     }
 
     .sing-section{
-        width: 100%;
-        height: 120px;
+        width: $settingSectionWidth;
+        height: 100px;
         border: 1px red solid;
-        margin-top: 20px;
+        margin-top: 5px;
 
         .sing-text{
             color: black;
             font-size: 1.1rem;
             margin-left: 2px;
+            cursor: default
         }
 
         .sing-link{
@@ -286,12 +285,58 @@ body{
 
 
     .general-section{
-        width: 100%;
-        height: 280px;
+        width: $settingSectionWidth;
+        height: 180px;
+        border: 1px red solid;
+        margin-top: 5px;
+
+        .section-name{
+            @extend .sections-name-commn-style;
+        }
+    }
+
+    .color-theme-section{
+        width: $settingSectionWidth;
+        height: 200px;
         border: 1px red solid;
         margin-top: 10px;
+
+        .color-section-name{
+            @extend .sections-name-commn-style;
+        }
     }
-   }
+
+    .about-me-section{
+        width: $settingSectionWidth;
+        height: 248px;
+        border: 1px solid;
+
+        .about-section-name{
+            @extend .sections-name-commn-style;
+        }
+
+        a{
+            display: inline-block;
+            margin-left: 50px;
+            margin-top: 50px;
+            cursor: pointer;
+
+            font-size: 1.8rem;
+            text-decoration: none;
+            text-decoration: none;
+            
+        }
+    }
+
+    .sections-name-commn-style{
+        color: black;
+        margin-left: 6px;
+        margin-top: 4px;
+        font-size: 1.2rem;
+        cursor: default;
+    }
+
+  }
 
    .head-section{
     width: 100%;
