--- a/style/Style.css
+++ b/style/Style.css
@@ -21,8 +21,8 @@ body {
     background-color: #F3F2F1;
     border: 0.5px red solid;
     position: absolute;
-    z-index: -100;
-    opacity: 0;
+    z-index: 100;
+    opacity: 1;
     margin-left: 5%;
     margin-top: 100px;
     border-radius: 8px; }
@@ -166,15 +166,14 @@ body {
     width: inherit;
     height: inherit;
     position: absolute;
-    background-color: #FFFFFF;
+    background-color: inherit;
     max-width: 600px;
-    z-index: 100;
-    opacity: 1;
+    z-index: -100;
+    opacity: 0;
     border: 1px solid; }
     #root-div .settings-section .setting-head {
       width: 100%;
       height: 40px;
-      border: 1px black solid;
       display: flex;
       align-items: center;
       justify-content: space-between; }
@@ -191,7 +190,7 @@ body {
           font-size: 1.2rem; }
       #root-div .settings-section .setting-head .section-name {
         color: black;
-        margin-right: 40%;
+        margin-left: -150px;
         font-family: inherit;
         font-size: 1rem;
         cursor: default; }
@@ -209,7 +208,6 @@ body {
     #root-div .settings-section .sing-section {
       width: 100%;
       height: 100px;
-      border: 1px red solid;
       margin-top: 5px; }
       #root-div .settings-section .sing-section .sing-text {
         color: black;
@@ -233,17 +231,14 @@ body {
     #root-div .settings-section .general-section {
       width: 100%;
       height: 180px;
-      border: 1px red solid;
       margin-top: 5px; }
     #root-div .settings-section .color-theme-section {
       width: 100%;
       height: 200px;
-      border: 1px red solid;
       margin-top: 10px; }
     #root-div .settings-section .about-me-section {
       width: 100%;
-      height: 248px;
-      border: 1px solid; }
+      height: 246px; }
       #root-div .settings-section .about-me-section a {
         display: inline-block;
         margin-left: 50px;
