--- a/style/Style.css
+++ b/style/Style.css
@@ -21,7 +21,7 @@ body {
     background-color: #F3F2F1;
     border: 0.5px red solid;
     position: absolute;
-    z-index: 100;
+    z-index: -100;
     opacity: 1;
     margin-left: 5%;
     margin-top: 100px;
@@ -304,19 +304,20 @@ body {
     #root-div .app-name-section .app-name-tag {
       font-size: 1.4rem;
       font-family: inherit;
-      cursor: default; }
+      cursor: default;
+      margin-left: 10px; }
   #root-div .search-section {
     width: 100%;
     height: 40px;
     margin-top: 4px; }
     #root-div .search-section .input-fild {
-      width: 98%;
+      width: 95%;
       height: 35px;
       border-radius: 2px;
       outline: none;
       background: none;
       margin-top: 4px;
-      margin-left: 2px;
+      margin-left: 10px;
       border: none;
       background-color: #EEEEEE;
       font-family: inherit;
@@ -336,5 +337,51 @@ body {
         background-color: #EEEEEE; }
       #root-div .search-section .search-button .bi-search {
         font-size: 1rem; }
+  #root-div .note-holder-section {
+    width: 100%;
+    height: 633px;
+    margin-top: 20px;
+    background-color: inherit; }
+    #root-div .note-holder-section .note-holder {
+      width: 99%;
+      height: 630px;
+      margin: 0px auto;
+      overflow: scroll;
+      overflow-x: hidden; }
+      #root-div .note-holder-section .note-holder::-webkit-scrollbar {
+        width: 4px;
+        height: 30px;
+        border-radius: 20px;
+        background-color: #FFFFFF; }
+      #root-div .note-holder-section .note-holder::-webkit-scrollbar-thumb {
+        width: 5px;
+        height: 5px;
+        border-radius: 20px;
+        background-color: #696868; }
+      #root-div .note-holder-section .note-holder:hover::-webkit-scrollbar {
+        width: 10px;
+        height: 10px; }
+      #root-div .note-holder-section .note-holder .singel-note {
+        width: 97%;
+        height: 80px;
+        background-color: #E2F1FF;
+        margin: 6px auto;
+        margin-bottom: 0px;
+        border-radius: 4px;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 20% 80%; }
+        #root-div .note-holder-section .note-holder .singel-note .note-date {
+          font-size: 0.8rem;
+          font-family: inherit;
+          color: #777777;
+          grid-row: 1/2;
+          margin-left: 88%;
+          cursor: default; }
+        #root-div .note-holder-section .note-holder .singel-note .content {
+          color: black;
+          grid-row: 2/3;
+          margin-left: 4px;
+          font-size: 0.9rem; }
 
 /*# sourceMappingURL=style.css.map */
